NavView: fix pane close on mobile devices when inputs, inside a pane, receive a focus, issue #1580

--- a/tests/metro/css/metro-components.css
+++ b/tests/metro/css/metro-components.css
@@ -1,7 +1,7 @@
 /*
  * Metro 4 Components Library v4.3.10  (https://metroui.org.ua)
  * Copyright 2012-2020 Sergey Pimenov
- * Built at 04/07/2020 11:59:16
+ * Built at 08/07/2020 11:02:01
  * Licensed under MIT
  */
 .accordion {
@@ -8473,6 +8473,7 @@ input.input-small:-ms-input-placeholder {
   -o-transition: all 0.1s linear;
   transition: all 0.1s linear;
   min-height: 100%;
+  height: 100%;
 }
 .navview .navview-pane {
   width: 280px;
@@ -8480,7 +8481,6 @@ input.input-small:-ms-input-placeholder {
   position: absolute;
   left: 0;
   top: 0;
-  height: 100%;
   -webkit-transform: translate3d(-100%, 0, 0);
           transform: translate3d(-100%, 0, 0);
   z-index: 3;
@@ -9145,6 +9145,19 @@ input.input-small:-ms-input-placeholder {
 .navview.compacted .navview-menu .navview-menu .item-header,
 .navview.js-compact:not(.expanded) .navview-menu .navview-menu .item-header {
   display: block!important;
+}
+.navview.compacted .navview-pane > .navview-menu-container > .navview-menu > li > a > .caption,
+.navview.js-compact .navview-pane > .navview-menu-container > .navview-menu > li > a > .caption {
+  display: none;
+}
+.navview.compacted .navview-pane > .navview-menu-container > .navview-menu > li > a > .icon:hover + .caption,
+.navview.js-compact .navview-pane > .navview-menu-container > .navview-menu > li > a > .icon:hover + .caption {
+  display: block!important;
+  position: absolute;
+  left: calc(100% + 4px);
+  top: 0;
+  background-color: inherit;
+  padding: 0 16px;
 }
 .notify-container {
   background-color: transparent;
